set(CMAKE_CXX_STANDARD 17)

file(GLOB MODEL_COMPONENTS_SRC            "include/model/components/*.h"                 "src/components/*.cpp")
file(GLOB MODEL_RENDERING_SRC             "include/model/rendering/*.h"                  "src/rendering/*.cpp")
file(GLOB MODEL_SRC                       "include/model/*.h"                            "src/*.cpp")
file(GLOB MODEL_CACHES_SRC                "include/model/caches/*.h"                     "src/caches/*.cpp")
file(GLOB MODEL_REFLECTION_SRC            "include/model/reflection/*.h"                 "src/reflection/*.cpp")
file(GLOB MODEL_REFLECTION_HANDLERS_SRC   "include/model/reflection/type_handlers/*.h"   "src/reflection/type_handlers/*.cpp")

add_library(model STATIC
   ${MODEL_COMPONENTS_SRC}         
   ${MODEL_RENDERING_SRC}        
   ${MODEL_SRC}         
   ${MODEL_CACHES_SRC}
   ${MODEL_REFLECTION_SRC}        
   ${MODEL_REFLECTION_HANDLERS_SRC}
   
   ${CMAKE_BINARY_DIR}/agea_generated/soal.generated.cpp
)

target_link_libraries(model PUBLIC
   agea::utils
   agea::glm_unofficial
   agea::serialization
   agea::resource_locator
   agea::vulkan_render_types
   agea::model_global_api
)
agea_finalize_library(model)

add_custom_target(generate.soal ALL)
add_custom_command(
    TARGET generate.soal
    PRE_BUILD
    COMMAND python ${PROJECT_SOURCE_DIR}/tools/soal_gen.py
                   ${PROJECT_SOURCE_DIR}/libs/model/soal/config 
                   ${PROJECT_SOURCE_DIR}/libs/model
                   ${CMAKE_BINARY_DIR}/agea_generated/soal.generated.cpp)


add_dependencies(model generate.soal)

if(EXISTS ${CMAKE_BINARY_DIR}/agea_generated/soal.generated.cpp)
    message("File already exists, skipping")
else()
    write_file(${CMAKE_BINARY_DIR}/agea_generated/soal.generated.cpp "// autogenerated sol file")
endif()